# mp3player

./: CMakeLists.txt  README.md
src/: main.c  main.h
